<resources>
    <string name="app_name">Dawor</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="name">Name</string>
    <string name="daftar_peserta">Daftar Peserta</string>
    <string name="daftar_kegiatan">Daftar Kegiatan</string>
    <string name="tanggal">Tanggal</string>
    <string name="tambah_peserta">Tambah Peserta</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="save">Simpan</string>
    <string name="done"> Selesai?</string>
    <string name="add_agenda">Tambah Agenda</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete">Hapus</string>
    <string name="are_you_sure">Yakin hapus?</string>
    <string name="yes">YA</string>
</resources>